added pseudo code

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 
 	<meta charset="UTF-8">
 	<title>Psychic Game</title>
-	
-
-
-
 
 </head>
 
 <body>
+
 
 <h1> The Psychic Game </h1>
 
@@ -22,7 +19,35 @@
 <p> Guesses Left: </p>
 <p> Your Guess so far: </p>
 
-	
+	<script type="text/javascript"> 
+
+	// computer randomly generates random letter
+
+
+
+
+
+	// user guesses (inputs) letter (variable) by keystroke
+
+
+	// computer compares the determines if the randomly generated letter and the user's guess is the same letter
+
+
+
+	// if the user's guess is the same letter as the preselected letter, then wins row increase by a value of 1 
+
+
+	// if the users' guess is the same letter as the preselected letter, then the 'guesses left' row is reset to 10
+
+	// if the users' guess is the same letter as the preselected letter, then 'your guesses so far' row is reset 
+
+	//if the users' guess is not the same letter as the preselected letter, then 'guesses left' decreases by a value of 1
+
+
+	// if the users' guess is not the same letter as the preselected letter, then users' guess is displayed in the 'your guesses so far' row
+
+	</script>
+
 </body>
 
 </html>
