--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
 	// computer randomly generates random letter
 
 
-
-
-
 	// user guesses (inputs) letter (variable) by keystroke
-
-
-	// computer compares the determines if the randomly generated letter and the user's guess is the same letter
-
 
 
 	// if the user's guess is the same letter as the preselected letter, then wins row increase by a value of 1 
@@ -45,6 +38,12 @@
 
 
 	// if the users' guess is not the same letter as the preselected letter, then users' guess is displayed in the 'your guesses so far' row
+
+	// if the 'guesses left' equals 0, then losses row increases by increment of 1
+
+	// if the 'guesses left' row equals 0, then it gets reset to starting value of 10
+
+	// if the 'guesses left' row equals 0, then 'your guesses so far' row is reset
 
 	</script>
 
